# qt-wix

./: CMakeLists.txt  FindWix.cmake  main.wxs  qt.conf  qt.wxs
